# postgres-lead-whatsapp-dispatcher

./: .env.example  .gitignore  COMPLIANCE.md  Makefile  README.md  index.html  linkedin-post.txt  project-overview.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  project-pdf.yml
config/: instances.example.yml  lead_query.example.sql  messages.example.yml
scripts/: generate_project_pdf.py  setup_postgres_hdd.sh
src/lead_dispatcher/: __init__.py  database.py  dispatch_state.py  dispatcher.py  eligibility.py  evolution_client.py  instance_pool.py  lead_repository.py  logging_config.py  main.py  message_renderer.py  reporting.py  settings.py  utils.py
tests/: test_dispatcher.py  test_eligibility.py  test_evolution_client.py  test_instance_pool.py  test_message_renderer.py  test_reporting.py  test_utils.py
