[project]
name = "postgres-lead-whatsapp-dispatcher"
version = "0.1.0"
description = "Script Python modular para consultar leads no PostgreSQL, validar status comercial e distribuir envios via Evolution Go."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Anotther" }
]
keywords = [
  "python",
  "postgresql",
  "whatsapp",
  "evolution-api",
  "lead-automation",
  "sales-ops"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

dependencies = [
  "psycopg[binary]>=3.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "tenacity>=8.5.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[project.scripts]
lead-dispatcher = "lead_dispatcher.main:run_dispatch"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]